Fixed flexbox container alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
 .header h1 {
   font-size: 10vw;
   color: #FFFFFF;
+  text-shadow: 5px 5px #00000080;
 }
 
 .nav {
@@ -46,20 +47,21 @@ body {
 
 .nav button {
   display: flex;
-  background-color: #FFFFFF;
-  color: #000000;
-  border: 3px solid #555555;
+  background-color: #FFFFFF00;
+  color: #FFFFFF;
+  border: 2px solid #FFFFFF;
   border-radius: 5px;
   width: 30%;
   height: 3rem;
   margin: 5vw;
   align-items: center;
   justify-content: center;
+  box-shadow: 5px 5px #00000080;
 }
 
 .nav button:hover {
-  background-color: #555555;
-  color: #FFFFFF;
+  background-color: #FFFFFF;
+  color: #000000;
 }
 
 .about {
@@ -68,7 +70,8 @@ body {
 }
 
 .about h2 {
-  margin-top: 10vh;
+  margin-top: 40vh;
+  margin-bottom: 1vh;
 }
 
 .about p {
@@ -76,26 +79,29 @@ body {
 }
 
 .projects h2{
-  margin: 5vw;
+  margin: 25vw 5vw 1vw 5vw;
   color: #FFFFFF;
 }
 
 .project-container {
-  margin: 5vw;
+  margin-left: 11.5vw;
+  margin-right: 11.5vw;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   position: relative;
 }
 
 .project-container img {
   padding: 0 2vw;
-  border-radius: 80px;
+  text-align: center;
 }
 
 .project-container div {
-  flex: 0 32%;
+  flex: 0 0 33%;
   margin-bottom: 2%;
+  display: flex;
 }
 
 .button-overlay {
